[nuki] Deprecations (#20826)
Signed-off-by: Holger Friedrich <mail@holger-friedrich.de>